set index page and change functionality on creating and deleting page; show page name instead of title
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7085 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -26,11 +26,11 @@
 			 skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>-->
 
 		<components:PropertiesPanel id="propertiesPanel"
-									width="100%"
+									width="100%" height="45%"
 									cornerRadius="5" skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
 
 		<components:LevelsFilterPanel id="levelsPanel"
-									  width="100%"
+									  width="100%" height="55%"
 									  cornerRadius="5" skinClass="net.vdombox.ide.modules.tree.view.skins.PanelSkin"/>
 	</s:VGroup>
 </s:Group>
