Fix bug with background
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7091 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/TextInputAttribute.mxml
@@ -28,6 +28,7 @@
 			{
 				_value = value;
 				lbl.text = value;
+				dispatchEvent( new Event( Event.CHANGE ));
 			}
 			
 			public function initChars(_interface : uint, _attributeDescriptionVO : AttributeDescriptionVO) : void
