--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/AccordionHeaderSkin.mxml
@@ -52,5 +52,17 @@
 		</s:fill>
 		
 	</s:Rect>
+	
+	<s:Line top="0" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1"/>
+		</s:stroke>
+	</s:Line>
+	
+	<s:Line bottom="0" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1"/>
+		</s:stroke>
+	</s:Line>
 
 </local:SparkSkinForHalo>
