--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -2,7 +2,7 @@
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  height="25" contentBackgroundColor="#FF0000">
+					  height="25" width="100%">
 	
 	<s:states>
 		<s:State name="normal" />            
@@ -15,10 +15,17 @@
 			import mx.binding.utils.BindingUtils;
 			
 			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.modules.wysiwyg.events.ObjectsTreePanelEvent;
 			private var _resourceID : String;
 			private var _resourceVO : ResourceVO;
+			private var _rendererID : String;
 			private var loader : Loader;
 			
+			public function get rendererID():String
+			{
+				return _rendererID;
+			}
+
 			public function get resourceID():String
 			{
 				return _resourceID;
@@ -30,6 +37,7 @@
 				if ( value != null )
 				{
 					_resourceID = XML(value).@iconID;
+					_rendererID = XML(value).@id;
 					dispatchEvent( new Event('TreeItemRendererComplete') );
 				}
 				
@@ -76,8 +84,11 @@
 		]]>
 	</fx:Script>
 	
-	<s:Group left="-2" right="0" top="-2" bottom="-2">
-		<s:Rect bottom="0" left="0" right="0" top="0">
+	<s:Button left="-2" width="20" height="100%" click="{ dispatchEvent( new ObjectsTreePanelEvent( ObjectsTreePanelEvent.EYE ) )}"
+			  mouseDown="event.stopImmediatePropagation()"/>
+	
+	<s:Group left="20" width="100%" top="-2" bottom="-2">
+		<s:Rect width="100%" height="100%">
 			<s:fill>
 				<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#0000FF" color.selected="#00000A"/>
 			</s:fill>
@@ -97,8 +108,12 @@
 			
 			<s:BitmapImage id="componentIcon" />
 			
-			<s:Label id="labelField" color="#FFFFFF" text="{treeListData.label}" paddingTop="2"/>
+			<s:TextInput id="labelField" color="#FFFFFF" text="{treeListData.label}" paddingTop="2" editable="false" borderVisible="false"/>
+			
+			<mx:Spacer width="100%"/>
+			
 		</s:HGroup>
+		
 		
 		<s:Line top="0" width="100%">
 			<s:stroke>
