--- a/Help/Editor/v.01/src/main.css
+++ b/Help/Editor/v.01/src/main.css
@@ -31,17 +31,7 @@ padding-bottom:15px;
 	margin: 0;
 }
 
-.tocByHeaders {
-list-style:none;
-margin:0px;
-padding:0px;
-margin-top:15px;
-margin-bottom:15px;
-border-bottom:1px solid #ccc;
-padding-bottom:15px;
-}
-
-.tocByPages {
+.tocClassForStyles {
 list-style:none;
 margin:0px;
 padding:0px;
