--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -2,7 +2,7 @@
 <mx:WindowedApplication showStatusBar="false" showGripper="false" showTitleBar="false"
 						xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
 						xmlns:mx="http://www.adobe.com/2006/mxml"
-						minWidth="800" minHeight="600" width="1000" height="800"
+						minWidth="800" minHeight="600" width="800" height="600"
 						layout="absolute"
 						creationComplete="{creationCompleteHandler()}"
 						backgroundColor="0x373739"
@@ -1055,7 +1055,7 @@
 		</mx:HBox>
 		<mx:HRule width="100%" strokeColor="0x1a1a1a" shadowColor="0x4b4c4c" />
 		<mx:HDividedBox y="60" width="100%" height="100%" horizontalGap="1">
-			<mx:VBox height="100%" minWidth="220" horizontalScrollPolicy="off">
+			<mx:VBox height="100%" minWidth="220" width="220" horizontalScrollPolicy="off">
 				<mx:HBox paddingLeft="3" paddingRight="3" color="#FFFFFF" width="100%">
 					<mx:ComboBox id="cmboxProduct"
 								 width="100%"
