--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -174,6 +174,7 @@
 				xmlContent = new XML(pageContent);
 				
 				// remove toc ...
+					// remove old variant of toc ...
 				for each (var xmlDiv:XML in xmlContent.body.div) {
 					
 					divClass = String(xmlDiv.@["class"]);
@@ -184,6 +185,7 @@
 						delete xmlDiv.parent().children()[xmlDiv.childIndex()];
 					}
 				}
+					// ... remove old variant of toc
 				
 				for each (var xmlUl:XML in xmlContent.body.ul) {
 					
