--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -21,6 +21,9 @@
 			private var _rendererID : String;
 			private var loader : Loader;
 			
+			private var _visible : Boolean;
+			
+			
 			public function get rendererID():String
 			{
 				return _rendererID;
@@ -29,6 +32,7 @@
 			public function get resourceID():String
 			{
 				return _resourceID;
+				
 			}
 			
 			override public function set data( value : Object ) : void
@@ -36,9 +40,26 @@
 				super.data = value;
 				if ( value != null )
 				{
-					_resourceID = XML(value).@iconID;
-					_rendererID = XML(value).@id;
+					var valueXML : XML = value as XML;
+					_resourceID = valueXML.@iconID;
+					_rendererID = valueXML.@id;
+					if (valueXML.@visible[0])
+					{
+						btnEye.visible = true;
+						groupContent.left = 20;
+						_visible = valueXML.@visible == "true";
+						if ( _visible )
+							btnEye.label = "1";
+						else
+							btnEye.label = "0";
+					}
+					else
+					{
+						btnEye.visible = false;
+						groupContent.left = -2;
+					}
 					dispatchEvent( new Event('TreeItemRendererComplete') );
+
 				}
 				
 			}
@@ -81,13 +102,22 @@
 				
 			}
 			
+			private function visibleClickHandler( event : Event ) : void
+			{
+				_visible = !_visible;
+				var treePanelEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.EYE );
+				treePanelEvent.visible = _visible;
+				dispatchEvent( treePanelEvent );
+				
+			}
+			
 		]]>
 	</fx:Script>
 	
-	<s:Button left="-2" width="20" height="100%" click="{ dispatchEvent( new ObjectsTreePanelEvent( ObjectsTreePanelEvent.EYE ) )}"
-			  mouseDown="event.stopImmediatePropagation()"/>
+	<s:Button id="btnEye" left="-2" width="20" height="100%" label="1"
+			  mouseDown="{ visibleClickHandler(event); event.stopImmediatePropagation() }"/>
 	
-	<s:Group left="20" width="100%" top="-2" bottom="-2">
+	<s:Group id="groupContent" left="20" width="100%" top="-2" bottom="-2">
 		<s:Rect width="100%" height="100%">
 			<s:fill>
 				<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#0000FF" color.selected="#00000A"/>
