--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -120,7 +120,7 @@
 	<s:Group id="groupContent" left="20" width="100%" top="-2" bottom="-2">
 		<s:Rect width="100%" height="100%">
 			<s:fill>
-				<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#0000FF" color.selected="#00000A"/>
+				<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
 			</s:fill>
 		</s:Rect>
 		
@@ -136,7 +136,7 @@
 				<s:BitmapImage source="{treeListData.disclosureIcon}" visible="{treeListData.hasChildren}" />
 			</s:Group>
 			
-			<s:BitmapImage id="componentIcon" />
+			<s:BitmapImage id="componentIcon"/>
 			
 			<s:TextInput id="labelField" color="#FFFFFF" text="{treeListData.label}" paddingTop="2" editable="false" borderVisible="false"/>
 			
