--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -2,7 +2,7 @@
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
 					  xmlns:mx="library://ns.adobe.com/flex/mx"
-					  height="25" width="100%">
+					  height="25" width="100%" contentBackgroundAlpha="0" >
 	
 	<s:states>
 		<s:State name="normal" />            
@@ -35,6 +35,12 @@
 				
 			}
 			
+			[Embed(source="icons/eye_1.png")]
+			public var visibleEye:Class;
+			
+			[Embed(source="icons/eye_0.png")]
+			public var noVisibleEye:Class;
+			
 			override public function set data( value : Object ) : void
 			{
 				super.data = value;
@@ -45,17 +51,17 @@
 					_rendererID = valueXML.@id;
 					if (valueXML.@visible[0])
 					{
-						btnEye.visible = true;
+						eyes.visible = true;
 						groupContent.left = 20;
 						_visible = valueXML.@visible == "true";
 						if ( _visible )
-							btnEye.label = "1";
+							eyes.source = visibleEye;
 						else
-							btnEye.label = "0";
+							eyes.source = noVisibleEye;
 					}
 					else
 					{
-						btnEye.visible = false;
+						eyes.visible = false;
 						groupContent.left = -2;
 					}
 					dispatchEvent( new Event('TreeItemRendererComplete') );
@@ -105,6 +111,10 @@
 			private function visibleClickHandler( event : Event ) : void
 			{
 				_visible = !_visible;
+				if ( _visible )
+					eyes.source = visibleEye;
+				else
+					eyes.source = noVisibleEye;
 				var treePanelEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.EYE );
 				treePanelEvent.visible = _visible;
 				dispatchEvent( treePanelEvent );
@@ -114,7 +124,14 @@
 		]]>
 	</fx:Script>
 	
-	<s:Button id="btnEye" left="-2" width="20" height="100%" label="1"
+	
+	<s:Rect left="-2" width="20" height="100%">
+		<s:fill>
+			<s:SolidColor color.normal="#3A3A3A" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
+		</s:fill>
+	</s:Rect>
+	
+	<mx:Image id="eyes" left="-2" width="20" height="100%" source="@Embed('icons/eye_1.png')" verticalAlign="middle" horizontalAlign="center"
 			  mouseDown="{ visibleClickHandler(event); event.stopImmediatePropagation() }"/>
 	
 	<s:Group id="groupContent" left="20" width="100%" top="-2" bottom="-2">
