--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectTreePanelItemRenderer.mxml
@@ -32,7 +32,6 @@
 			public function get resourceID():String
 			{
 				return _resourceID;
-				
 			}
 			
 			[Embed(source="icons/eye_1.png")]
@@ -43,6 +42,7 @@
 			
 			override public function set data( value : Object ) : void
 			{
+				
 				super.data = value;
 				if ( value != null )
 				{
@@ -51,7 +51,7 @@
 					_rendererID = valueXML.@id;
 					if (valueXML.@visible[0])
 					{
-						eyes.visible = true;
+						eyesGroup.visible = true;
 						groupContent.left = 20;
 						_visible = valueXML.@visible == "true";
 						if ( _visible )
@@ -61,7 +61,7 @@
 					}
 					else
 					{
-						eyes.visible = false;
+						eyesGroup.visible = false;
 						groupContent.left = -2;
 					}
 					dispatchEvent( new Event('TreeItemRendererComplete') );
@@ -124,23 +124,14 @@
 		]]>
 	</fx:Script>
 	
-	
-	<s:Rect left="-2" width="20" height="100%">
+	<s:Rect left="-2" width="100%" top="-2" bottom="-2">
 		<s:fill>
-			<s:SolidColor color.normal="#3A3A3A" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
+			<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
 		</s:fill>
 	</s:Rect>
 	
-	<mx:Image id="eyes" left="-2" width="20" height="100%" source="@Embed('icons/eye_1.png')" verticalAlign="middle" horizontalAlign="center"
-			  mouseDown="{ visibleClickHandler(event); event.stopImmediatePropagation() }"/>
-	
 	<s:Group id="groupContent" left="20" width="100%" top="-2" bottom="-2">
-		<s:Rect width="100%" height="100%">
-			<s:fill>
-				<s:SolidColor id="rectColor" color.normal="#3A3A3A" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
-			</s:fill>
-		</s:Rect>
-		
+
 		<s:HGroup width="100%" height="100%" verticalAlign="middle">
 			
 			<s:Rect id="indentationSpacer" width="{treeListData.indent}" percentHeight="100">
@@ -161,17 +152,33 @@
 			
 		</s:HGroup>
 		
-		
-		<s:Line top="0" width="100%">
-			<s:stroke>
-				<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1"/>
-			</s:stroke>
-		</s:Line>
-		
-		<s:Line bottom="0" width="100%">
-			<s:stroke>
-				<s:SolidColorStroke color="#000000" alpha="0.5" weight="1"/>
-			</s:stroke>
-		</s:Line>
 	</s:Group>
+	
+	<s:Group id="eyesGroup" top="-2" bottom="-2" left="-2" width="22" height="100%"
+			 mouseDown="{ visibleClickHandler(event); event.stopImmediatePropagation() }">
+		
+		<s:Rect width="100%" top="0" bottom="-2">
+			<s:fill>
+				<s:SolidColor color.normal="#585858" color.hovered="#00000A" alpha.hovered="0.8" color.selected="#00000A"/>
+			</s:fill>
+		</s:Rect>
+		
+		<s:VGroup width="22" height="100%"  verticalAlign="middle" horizontalAlign="center">
+			<mx:Image id="eyes"  width="16" height="14" source="@Embed('icons/eye_1.png')"/>
+		</s:VGroup>
+		
+	</s:Group>
+	
+	<s:Line top="-2" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#FFFFFF" alpha="0.5" weight="1"/>
+		</s:stroke>
+	</s:Line>
+	
+	<s:Line bottom="-2" left="-2" width="100%">
+		<s:stroke>
+			<s:SolidColorStroke color="#000000" alpha="0.5" weight="1"/>
+		</s:stroke>
+	</s:Line>
+	
 </s:MXTreeItemRenderer>
