Fixed same error
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7115 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -47,7 +47,7 @@
 				
 				if ( value && value.length > 0 )
 				{
-					var newSelectedIndex : int = -1;
+					var newSelectedIndex : int = 0;
 
 					if ( oldSelectedItem )
 					{
@@ -87,7 +87,7 @@
 						isSelectedItemChanged = false;
 				}
 
-				if( isSelectedItemChanged )
+//				if( isSelectedItemChanged )
 					dispatchEvent( new ServerScriptsPanelEvent( ServerScriptsPanelEvent.SELECTED_SERVER_ACTION_CHANGED ) );
 			}
 
