--- a/Help/Reader/v.01/src/main.css
+++ b/Help/Reader/v.01/src/main.css
@@ -1,7 +1,7 @@
 body {
-	font:14px Arial,segoe ui;
+	font-size:12px;
 	color:#000;
-	
+	font-family:Segoe UI, Arial;
 	margin:0;
 	padding:25px;
 	
@@ -17,7 +17,7 @@ A img {
 }
 
 h1 {
-	border-bottom:2px solid #ccc;
+	border-bottom:4px solid #ff0000;
 	padding-bottom:15px;
 }
 
@@ -31,22 +31,50 @@ h1 {
 	margin: 0;
 }
 
-.tocClassForStyles {
-	list-style:none;
+.contents, .tocByPages, .tocByHeaders {
+	
+	list-style-image: url(../images/list-style-toc.png);
 	margin:0px;
-	padding:0px;
+	padding:25px;
 	margin-top:15px;
 	margin-bottom:15px;
-	border-bottom:1px solid #ccc;
+	border:1px solid #dddddd;
 	padding-bottom:15px;
+	background:#f6f6f6;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	display:table-cell;
+}
+
+pre {
+	padding:15px;
+	border:1px solid #dddddd;
+	background:#f6f6f6;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	
+	font-size:11px;
+	
+}
+.pre {
+	margin:15px;
+}
+pre span{
+	font-size:14px;
+	font-weight:bold;
+	display:block;
+	font-family:Segoe UI, Arial;
+	margin-bottom:10px;
 }
 
 ul {
-	list-style:square outside;
-	margin:0px;
-	padding:0px;
+	list-style-image: url(../images/list-style-regular.png) ;
+	margin:0px ;
+	padding:0px ;
 	margin-top:15px;
-	margin-bottom:35px;
+	margin-bottom:35px ;
 	margin-left:35px;
 }
 
@@ -60,11 +88,12 @@ ol {
 }
 
 ul, ol {
-	line-height:1.3;
+	line-height:1.2 !important;
 }
 
 ul li, ol li{
-	margin-bottom:5px;
+	margin-bottom:12px !important;
+	font-size:12px !important;
 }
 
 ul.hotkeys li{
@@ -73,9 +102,9 @@ ul.hotkeys li{
 
 .button {
 	padding:3px;
-	border:1px solid #ccc;
-	border-bottom:2px solid #ccc;
-	border-right:2px solid #ccc;
+	border:1px solid #dddddd;
+	border-bottom:2px solid #dddddd;
+	border-right:2px solid #dddddd;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -84,9 +113,20 @@ ul.hotkeys li{
 	background-position: bottom center;
 	background-repeat:repeat-x;
 }
-.image img{
-	border:1px solid #777;
+img{
+	border:1px solid #dddddd;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	display:table-cell;
+	padding:15px;
+	background:#f6f6f6;
 }
+
+.image {
+	
+}
+
 .img_title {
 	font-style:italic;
 	color:#777;
@@ -108,21 +148,17 @@ ul.hotkeys li{
 	font-weight:bold;
 }
 
-.error pre {
-	background:#ffd0d0;
-	padding:8px;
-	margin-top:0px;
-	border-left:3px solid #c45656; 
-}
+
 
 table {
 	border-collapse:collapse;
 	margin-top:25px;
 	margin-bottom:25px;
+	
 }
 
 table th, table td {
-	border:1px solid #cecece;
+	border:1px solid #dddddd;
 	padding:15px;
 }
 
@@ -137,8 +173,8 @@ table th {
 	background-repeat:repeat-x;
 }
 table caption {
-	font-size:22px;
-	font-weight:bold;
+	font-size:18px;
+	
 	text-align:left;
 	padding-bottom:15px;
 }
@@ -148,4 +184,24 @@ table caption {
 	color:#000;
 	padding:2px;
 	font-size:12px;
+}
+.list {
+	border:1px solid #dddddd;
+	padding-bottom:15px;
+	
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+.list td:nth-child(3n+1) {
+	font-weight:bold;
+	color:#b5002b;
+}
+
+.list tr:nth-child(2n+2) {
+	
+	
+}
+.list tr:nth-child(2n+1) {
+	
 }
