--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -6,7 +6,7 @@
 						layout="absolute"
 						creationComplete="{creationCompleteHandler()}"
 						backgroundColor="0x373739"
-						titleBarColors="[ 0x666666, 0x222222 ]" title="VDOM Help Aplication"
+						titleBarColors="[ 0x666666, 0x222222 ]" title="VDOM Help Editor Aplication"
 						titleTextStyleName="tbStyle"
 						titleIcon="@Embed('icons/16_vdom_icon_editor.png')"
 						xmlns:local="*">
@@ -126,7 +126,7 @@
 				htmlShowHandler();
 			}
 
-			private function getCurrentPage() : void
+			private function getCurrentPage(aEvent : Event = null) : void
 			{
 //			tree.selectedItem = XML(lstEvt.itemRenderer.data);
 //			trace(": "+lstEvt.itemRenderer.data.@name +" : "+ tree.selectedItem.@name);
@@ -193,7 +193,6 @@
 					
 					if (ulClass.indexOf(PageToc.TOC_BY_HEADERS_CLASS) >= 0 || 
 						ulClass.indexOf(PageToc.TOC_BY_PAGES_CLASS) >= 0 ) {
-						
 						xmlPageToc = new PageToc(xmlUl);
 						xmlPageToc.tocType = xmlUl.@["class"];
 						
@@ -237,6 +236,7 @@
 				
 				xmlPageToc.generateTocContent(new XML(pageContent), pageChildren, useAnchors);
 				if (xmlContent.body.length() > 0 && xmlPageToc.tocXML && xmlPageToc.tocHasContent) {
+					
 					xmlContent.body.insertChildAfter(xmlContent.body.h1[0], xmlPageToc.tocXML);
 				}
 				
@@ -250,15 +250,9 @@
 					}
 				}
 				
-				//return xmlContent.toString();
 				var str:String = xmlContent.toString();
 				
 				return str;
-			}
-			
-			private function setPageTocContent(pageContent:String, pageChildren:XMLList, tocType:String):XML
-			{
-				return XML(pageContent);
 			}
 			
 			private function showAllProducts() : void
@@ -492,131 +486,13 @@
 				
 				if (!tree.selectedItem) return;
 				
-				resetImagesPath();
+				html_wysiwyg.resetImagesPath();
+				html_wysiwyg.resetImagesWidth();
 				sqlProxy.setPageContent(cmboxProduct.selectedItem.name, "en_US", tree.selectedItem.@name, html_wysiwyg.getHTML(), pageVersion);
 				getCurrentPage();
 			}
 
-			private function resetImagesPath() : void
-			{
-				resetHttpImages();
-				resetLocalImages();
-			}
-
-			private function resetLocalImages() : void
-			{
-				var pattern : RegExp;
-				var arrMatch : Array;
-
-				pattern = /<[ ]*img[^>]*src[ ]*=[ ]*"[^(app-storage:\/resources)][^"]*"/g;
-				arrMatch = html_wysiwyg.getHTML().match(pattern);
-
-				for each ( var strImg : String in arrMatch )
-				{
-					var oldPath : String = strImg.split("\"")[ strImg.split("\"").length - 2 ];
-
-					var newPath : String = copyImg(resetPath(oldPath));
-
-					html_wysiwyg.setHTML(html_wysiwyg.getHTML().replace(oldPath, newPath));
-				}
-			}
-			
-			private function resetPath(path:String) : String
-			{
-				path = path.substring(0 , path.lastIndexOf(".")) +
-					   path.substring(path.lastIndexOf("."), path.length).replace(" ", "");
-				
-				return path;
-			}
-
-			private function resetHttpImages() : void
-			{
-				var pattern : RegExp;
-				var arrMatch : Array;
-				var oldPath : String;
-				var newPath : String;
-				var newWysiwygData : String;
-
-				pattern = /<[ ]*img[^>]*src[ ]*=[ ]*"(http:\/\/|https:\/\/)[^"]*"/ig;
-				arrMatch = html_wysiwyg.getHTML().match(pattern);
-
-				for each ( var strImg : String in arrMatch )
-				{
-					oldPath = strImg.split("\"")[ strImg.split("\"").length - 2 ]
-					newPath = loadHttpImg(oldPath);
-
-					newWysiwygData = html_wysiwyg.getHTML().replace(oldPath, newPath);
-					html_wysiwyg.setHTML(newWysiwygData);
-				}
-			}
-
-			private function copyImg(aImageOldSrc_str:String) : String
-			{
-				trace("copyImg");
-				var targetPath : String;
-				var imgFile : File;
-				var newImgFile : File;
-
-				imgFile = new File(aImageOldSrc_str);
-				targetPath = "resources/" + generateFileName(aImageOldSrc_str, imgFile);
-				newImgFile = File.applicationStorageDirectory.resolvePath(targetPath);
-
-				
-				if ( !newImgFile.exists )
-					imgFile.copyTo(newImgFile);
-				
-				//return targetPath;
-				return newImgFile.url;
-			}
-
-			private function loadHttpImg(aImageOldSrc_str:String) : String
-			{
-				trace("loadHttpImg");
-				var targetPath : String;
-				var urlRequest : URLRequest;
-				var urlLoader : URLLoader;
-				var file : File;
-
-
-				targetPath = "resources/" + generateFileName(aImageOldSrc_str);
-				urlRequest = new URLRequest(aImageOldSrc_str);
-				urlLoader = new URLLoader();
-
-				urlLoader.dataFormat = URLLoaderDataFormat.BINARY;
-				urlLoader.addEventListener(Event.COMPLETE, urlLoader_complete);
-				urlLoader.addEventListener(IOErrorEvent.IO_ERROR, urlLoader_error);
-				urlLoader.addEventListener(SecurityErrorEvent.SECURITY_ERROR, urlLoader_error);
-				urlLoader.load(urlRequest);
-
-				file = File.applicationStorageDirectory.resolvePath(targetPath);
-
-				function urlLoader_complete(evt:Event) : void {
-					trace("loadHttpImg: urlLoader_complete");
-
-					var fileStream : FileStream;
-
-					fileStream = new FileStream();
-					try {
-						fileStream.open(file, FileMode.WRITE);
-						fileStream.writeBytes(urlLoader.data);
-						fileStream.close();
-						getCurrentPage();
-					} catch ( error : IOError ) {
-						trace("!!! Error Write !!! \n" + error.message +"\n");
-						return;
-					}
-				}
-
-				function urlLoader_error(evt:Event) : void {
-					trace("!!! Error Loading file !!! \n");
-				}
-
-
-				//return targetPath;
-				return file.url;
-			}
-
-			private function generateFileName(path:String, file:File = null) : String
+			public static function generateFileName(path:String, file:File = null) : String
 			{
 				var fileType : String;
 				var fileName : String;
@@ -627,7 +503,7 @@
 
 				fileType = path.substring(path.lastIndexOf("."), path.length);
 
-				if ( !file )
+				if ( !file || !file.exists)
 				{
 					fileName = UIDUtil.createUID() + fileType;
 
@@ -931,6 +807,7 @@
 			{
 				// TODO Auto-generated method stub
 				this.html_wysiwyg.addEventListener(HTML_WYSIWYG.EVENT_WYSIWYG_SAVE_COMBINATION_CLICKED, onWysiwygSaveCombinationClicked);
+				this.html_wysiwyg.addEventListener(HTML_WYSIWYG.EVENT_WYSIWYG_HTTP_IMAGE_LOADED, getCurrentPage);
 			}
 			
 			private function onTreeKeyboardKeyUp(aKeyboardEvent:KeyboardEvent) : void
@@ -1052,7 +929,7 @@
 					 color="#FFFFFF"
 					 width="100%">
 				<mx:Image source="@Embed('icons/16_vdom_icon_editor.png')" />
-				<mx:Label id="topTitle" text="VDOM Help Aplication" />
+				<mx:Label id="topTitle" text="VDOM Help Editor Aplication" />
 				<mx:HBox width="100%" horizontalAlign="right" paddingTop="2">
 					<mx:Image source="@Embed('../assets/minimize.png')" right="0" click="{minimize()}" />
 					<mx:Image source="@Embed('../assets/restore.png')" right="0" click="{minMaximize()}" />
