--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
@@ -2,9 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:components="net.vdombox.ide.modules.preview.view.components.*"
-		 
-		 height="100%">
+		 height="100%" xmlns:components="net.vdombox.ide.common.components.*" >
 
 	<fx:Metadata> 
 		[ResourceBundle("Preview_General")] 
@@ -15,14 +13,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<!--components:ToolsetButton id="toolsetButton"
-							  height="100%"
-							  icon="@Embed('icons/scripts_icon.png')"
-							  label="{ resourceManager.getString( 'Preview_General', 'toolset_button_label' ) }"
-							  skinClass="net.vdombox.ide.modules.preview.view.skins.ToolsetButtonSkin" /-->
 	<components:ToolsetButton id="toolsetButton"
-							  height="100%"
-							 
-							  label="{ resourceManager.getString( 'Preview_General', 'toolset_button_label' ) }"
-							  skinClass="net.vdombox.ide.modules.preview.view.skins.ToolsetButtonSkin" />
+							  height="100%" click="{toolsetButton.selected = false}"
+							  label="{resourceManager.getString( 'Preview_General', 'toolset_button_label' ) }"
+							  skinClass="net.vdombox.ide.common.skins.ToolsetButtonSkin" />
 </s:Group>
